--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "request-promise-native": "^1.0.3",
     "socicon": "^3.0.5",
     "style-loader": "^0.14.0",
+    "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
+    "uglifyjs-webpack-plugin": "^0.4.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-manifest-plugin": "^1.1.0",
