--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,24 @@
 language: node_js
 node_js:
   - "7"
-sudo: required
+sudo: false
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+cache:
+  yarn: true
 services:
   - docker
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    npm run build;
+    yarn run build;
     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
     docker build -t $DOCKER_USERNAME/$DOCKER_REPO .;
     docker push $DOCKER_USERNAME/$DOCKER_REPO:latest;
+    fi
+  - if [ "$TRAVIS_BRANCH" == "develop" ]; then
+    yarn run build;
+    docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+    docker build -t $DOCKER_USERNAME/$DOCKER_REPO .;
+    docker push $DOCKER_USERNAME/$DOCKER_REPO:beta;
     fi
