--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "babel-register": "^6.24.0",
     "bundle-loader": "^0.5.5",
     "cheerio": "^0.22.0",
-    "cross-env": "^3.2.3",
-    "css-loader": "^0.27.1",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.17.1",
-    "eslint-config-xo-react": "^0.10.0",
+    "eslint-config-xo-react": "^0.11.1",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-react": "^6.10.0",
     "express": "^4.15.2",
@@ -43,17 +43,18 @@
     "odometer": "^0.4.8",
     "postcss-cssnext": "^2.9.0",
     "postcss-loader": "^1.3.3",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-contextmenu": "^2.3.1",
     "react-dom": "^15.4.2",
-    "react-flexbox-grid": "^0.10.2",
+    "react-flexbox-grid": "^1.1.1",
     "react-grid-layout": "^0.14.4",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "react-toolbox": "^2.0.0-beta.7",
+    "react-toolbox": "2.0.0-beta.8",
     "request-promise-native": "^1.0.3",
     "socicon": "^3.0.5",
-    "style-loader": "^0.14.0",
+    "style-loader": "^0.16.1",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
     "uglifyjs-webpack-plugin": "^0.4.1",
     "webpack": "^2.2.1",
@@ -61,7 +62,7 @@
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-subresource-integrity": "^0.9.0",
     "whatwg-fetch": "^2.0.3",
-    "xo": "^0.17.1"
+    "xo": "^0.18.1"
   },
   "babel": {
     "presets": [
@@ -98,6 +99,9 @@
     "rules": {
       "react/forbid-component-props": [
         0
+      ],
+      "react/require-default-props": [
+        0
       ]
     },
     "env": {
@@ -107,6 +111,6 @@
     "parser": "babel-eslint"
   },
   "devDependencies": {
-    "file-loader": "^0.10.1"
+    "file-loader": "^0.11.1"
   }
 }
